# DKOps

./: .gitignore  404.html  CHANGELOG.md  README.md  demoApp.py  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.py
.github/workflows/: docs.yml  publish.yml
api/contracts/loader/: index.html
api/contracts/validator/: index.html
api/environment_config/: index.html
api/ingestion/bronze_ingestor/: index.html
api/ingestion/engine/: index.html
api/ingestion/silver_promoter/: index.html
api/ingestion/strategies/: index.html
api/launcher/: index.html
api/logger_config/: index.html
api/migrations/safe_migrator/: index.html
api/readers/table_reader/: index.html
api/writers/append/: index.html
api/writers/base/: index.html
api/writers/create/: index.html
api/writers/delete/: index.html
api/writers/partition/: index.html
api/writers/table_writer/: index.html
api/writers/upsert/: index.html
config/: config-copy.json
demos/demo_1/: README.md  data_generator.py  index.html  pipeline.py  pipeline_aeronautica.py
demos/demo_1/config/: config.json
demos/demo_1/datagen/: __init__.py  generate_aeropuertos.py  generate_vuelos.py  main.py
demos/demo_1/tables/: dim_aerolineas.json  dim_aeropuertos.json  dim_tiempo.json  fact_vuelos.json
demos/demo_2/: README.md  data_generator.py  index.html  pipeline.py  pipeline_manufactura.py  pytest.ini
demos/demo_2/config/: config.json
demos/demo_2/datagen/: __init__.py  generate_lotes.py  generate_ordenes.py  generate_ventas.py  main.py
demos/demo_2/dq/: __init__.py  dq_engine.py  rules.py
demos/demo_2/tables/: bronze_lotes_produccion_raw.json  bronze_ordenes_produccion_raw.json  bronze_ventas_raw.json  gold_calidad_lotes.json  (+5 more)
demos/demo_3/: README.md  data_generator.py  index.html  pipeline.py  pipeline_ecommerce.py
demos/demo_4/: README.md  data_generator.py  index.html  pipeline.py  pipeline_lectura.py
demos/demo_5/: README.md  index.html  pipeline.py
docs/: index.md
docs/demos/: demo_1.md  demo_2.md  demo_3.md  demo_4.md  demo_5.md
docs/guide/: architecture.md  contracts.md  ingestion.md  quickstart.md  readers.md  writers.md
guide/architecture/: index.html
guide/contracts/: index.html
guide/ingestion/: index.html
guide/migrations/: index.html
guide/quickstart/: index.html
guide/readers/: index.html
guide/writers/: index.html
search/: search_index.json
site/: index.html
site/search/: search_index.json
src/DKOps/: __init__.py  environment_config.py  launcher.py  logger_config.py
src/DKOps.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_contracts.py  test_safe_migrator.py  test_table_manager.py  test_table_reader.py  test_table_writer.py
tests/ingestion/: conftest.py  test_bronze_ingestor.py  test_ingestion_contracts.py  test_metadata_enricher.py  test_reader_factory.py
(+147 files in other folders)
