[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DKOps"
version = "0.1.0"
description = "Lakehouse automation framework for DataOps, DevOps, QA, and Medallion architecture on Databricks"
readme = "README.md"
authors = [
    { name = "Roberto", email = "brrsanchezfi@unal.edu.co" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["databricks", "spark", "delta", "lakehouse", "dataops", "medallion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

# Dependencias base — solo lo que el framework necesita siempre.
# PySpark y Delta NO van aquí porque en Databricks ya están instalados
# nativamente y agregarlos causaría conflictos en el cluster.
dependencies = [
    "loguru>=0.7.0",
]

[project.optional-dependencies]

# Instalar en PC local para desarrollo y pruebas
# pip install "DKOps[local]"
local = [
    "pyspark==3.5.3",
    "delta-spark==3.2.0",
]

# Instalar en PC local para conectar a un cluster remoto via Databricks Connect
# La versión debe coincidir con el DBR del cluster:
#   DBR 14.x → databricks-connect==14.x
#   DBR 15.x → databricks-connect==15.x
# pip install "DKOps[databricks-connect]"
databricks-connect = [
    "databricks-connect>=14.0,<16.0",
    "zstandard>=0.21.0",
]

# Herramientas de desarrollo
# pip install "DKOps[dev]"
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

# Todo junto para desarrollo local completo
# pip install "DKOps[local,dev]"

[project.urls]
Homepage      = "https://github.com/brrsanchezfi/DKOps"
Documentation = "https://github.com/brrsanchezfi/DKOps"
Repository    = "https://github.com/brrsanchezfi/DKOps"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ── Herramientas ──────────────────────────────────────────────────────────────

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long — black lo maneja
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict         = true